fix: scrolling and height on mobile.

--- a/src/assets/styles/styles.less
+++ b/src/assets/styles/styles.less
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow: auto;
   width: 100%;
   height: 100%;
   background-color: var(--spectrum-body-bg);
